--- a/style.css
+++ b/style.css
@@ -1,20 +1,117 @@
 .wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    max-width: 500px;
+    align-items: center;
+    margin: 0 auto;
 }
 
-.container {
-    width: 400px;
-    height: 50px;
-    margin-top: 30px;
+.title {
+    font-size: 25px;
+    margin: 30px 0;
+    text-transform: uppercase;
 }
 
-.hidden {
+.movie-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 30px auto 0;
+    max-width: 800px;
+}
+
+.movie-list-item {
+    display: flex;
+    flex-direction: column;
+    height: 360px;
+    width: 150px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.movie-list img {
+    max-height: 200px;
+    max-width: 150px;
+}
+
+.movie-title {
+    margin: 10px 0 0;
+    height: 70px;
+    margin-top: auto;
+    font-size: 16px;
+}
+
+.btn-details {
+    margin-top: auto;
+    width: 90%;
+    margin: 0 auto;
+    background-color: #dcfc2a;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn-favourite {
+    background-color: #15d1c8;
+}
+
+.btn-remove {
+    background-color: #080b85d2;
+}
+
+.navigation {
+    display: flex;
+    justify-content: center;
+}
+
+.modal-wrapper {
     display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.error {
-    display: none;
+.modal-window {
+    width: 900px;
+    border-radius: 5px;
+    background: #fff;
+    height: 600px;
+    margin: 150px auto 0;
+    display: flex;
+    position: relative;
+}
+
+.info {
+    margin-left: 20px;
+    max-width: 500px;
+    text-align: justify;
+}
+
+.close-btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: transparent;
+    border: 1px solid #000;
+    border-radius: 4px;
+    font-size: 20px;
+}
+
+.pagination-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style: none;
+    background-color: #77fdf6;
+}
+
+.pagination-list-item {
+    padding: 0 5px;
+}
+
+.pagination-list-item a {
+    text-decoration: none;
 }
