--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@
 
 .title {
     font-size: 25px;
-    margin: 30px 0;
+    margin: 30px 0 0;
+    text-transform: uppercase;
+}
+
+.subtitle {
+    font-size: 20px;
+    margin-bottom: 30px;
+    color: #15d1c8;
     text-transform: uppercase;
 }
 
@@ -41,22 +48,31 @@
     font-size: 16px;
 }
 
-.btn-details {
-    margin-top: auto;
-    width: 90%;
-    margin: 0 auto;
+.btn-details {    
+    width: 100px;
+    height: 30px;
+    margin: auto 0;
     background-color: #dcfc2a;
     border: none;
-    color: #fff;
+    border-radius: 4px;
+    color: #000;    
     cursor: pointer;
 }
 
-.btn-favourite {
-    background-color: #15d1c8;
+.btn-favourite {    
+    background-color: #15d1c8;    
 }
 
 .btn-remove {
-    background-color: #080b85d2;
+    background-color: #080b85d2;    
+}
+
+.btn-favourite, .btn-remove {
+    margin-top: 10px;
+}
+
+.btn-details:hover, .btn-favourite:hover, .btn-remove:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .navigation {
