--- a/style.css
+++ b/style.css
@@ -44,14 +44,14 @@
 .movie-title {
     margin: 10px 0 0;
     height: 70px;
-    margin-top: auto;
+    margin: auto;
     font-size: 16px;
 }
 
 .btn-details {    
     width: 100px;
     height: 30px;
-    margin: auto 0;
+    margin: auto;
     background-color: #dcfc2a;
     border: none;
     border-radius: 4px;
@@ -91,7 +91,7 @@
 }
 
 .modal-window {
-    width: 900px;
+    width: 700px;
     border-radius: 5px;
     background: #fff;
     height: 600px;
@@ -108,12 +108,16 @@
 
 .close-btn {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 6px;
+    top: 6px;
     background-color: transparent;
     border: 1px solid #000;
     border-radius: 4px;
     font-size: 20px;
+}
+
+.close-btn:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .pagination-list {
